examples/test/testpolicy8929.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8929
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key27: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value26
          key9: value48
          key41: value42
      podSelector:
        matchLabels:
          key41: value28
          key48: value0
          key12: value18
